--- a/package.json
+++ b/package.json
@@ -1,8 +1,20 @@
 {
-  "name": "vite_react_shadcn_ts",
-  "private": true,
+  "name": "news_trends",
   "version": "0.0.0",
+  "private": true,
+  "description": "**URL**: https://lovable.dev/projects/8e589f55-101f-46c0-98c1-9a768d38aa50",
+  "homepage": "https://github.com/chck0/news-trend-tracker#readme",
+  "bugs": {
+    "url": "https://github.com/chck0/news-trend-tracker/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/chck0/news-trend-tracker.git"
+  },
+  "license": "ISC",
+  "author": "",
   "type": "module",
+  "main": "eslint.config.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -39,7 +51,7 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@supabase/supabase-js": "^2.86.0",
+    "@supabase/supabase-js": "^2.80.0",
     "@tanstack/react-query": "^5.83.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -79,6 +91,6 @@
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.38.0",
-    "vite": "^5.4.19"
+    "vite": "^7.2.4"
   }
 }
